# CppMongoExample

./: CMakeLists.txt
include/: dao.h  mongo_dao.h
src/: mongo_dao.cpp
